--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Reynaldo Salcedo | Full Stack Developer</title>
-    <link type="stylesheet/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
+    <p>TESTING TEXT</p>
+    <p class="body-text">TESTING TEXT </p>
 
   </body>
 </html>
