--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reynaldo Salcedo | Full Stack Developer</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
-    <p>TESTING TEXT</p>
-    <p class="body-text">TESTING TEXT </p>
-
+    <header>
+      <div class="container">
+        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+      </div>
+    </header>
   </body>
 </html>
