Added header + new assets

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <body>
     <header>
       <div class="container">
-        <h1>HELLO THIS IS RANDMOM TEXT</h1>
-        <h1>HELLO THIS IS RANDMOM TEXT</h1>
-        <h1>HELLO THIS IS RANDMOM TEXT</h1>
-        <h1>HELLO THIS IS RANDMOM TEXT</h1>
-        <h1>HELLO THIS IS RANDMOM TEXT</h1>
+        <a href="index.html"><img src="assets/img/Logo.png" alt="Logo Image" /></a>
       </div>
+      <h1>My name is Reynaldo Salcedo</h1>
+      <h2>I am </h2>
     </header>
   </body>
 </html>
