Added styles to the header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <div class="container">
         <a href="index.html"><img src="assets/img/Logo.png" alt="Logo Image" /></a>
       </div>
-      <h1>My name is Reynaldo Salcedo</h1>
-      <h2>I am </h2>
+      <div class="container">
+        <h1>My name is Reynaldo Salcedo</h1>
+        <h2>I am</h2>
+      </div>
     </header>
   </body>
 </html>
