--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reynaldo Salcedo | Full Stack Developer</title>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/vendor/css/grid.css" />
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
