Reconfigured reset and added content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <h1>My name is Reynaldo Salcedo</h1>
         <h2>I am</h2>
       </div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>placeHolder</li>
+          <li>placeHolder</li>
+          <li>placeHolder</li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
