--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="mast-head">
       <div class="container">
         <a href="index.html"><img src="assets/img/Logo.png" alt="Logo Image" /></a>
         <h1>My name is Reynaldo Salcedo</h1>
