--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <h2>I am</h2>
         <nav>
           <ul>
-            <li>Home</li>
-            <li>placeHolder</li>
-            <li>placeHolder</li>
-            <li>placeHolder</li>
+            <div class="row container">
+              <li class="col-lg-2">Home</li>
+              <li class="col-lg-2">Porfolio</li>
+              <li class="col-lg-2"><img class="img-responsive" src="assets/img/Logo.png" alt="Logo image" /></li>
+              <li class="col-lg-2">Email</li>
+              <li class="col-lg-2">About-Me</li>
+            </div>
           </ul>
         </nav>
       </div>
