Fixed nav-logo issues

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
   </head>
   <body>
     <header class="mast-head">
-      <div class="container">
-        <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
-        <h1>My name is Reynaldo Salcedo</h1>
-        <h2>I am</h2>
-        <nav>
-          <ul>
-            <div class="row container">
-              <li class="col-lg-2">Home</li>
-              <li class="col-lg-2">Porfolio</li>
-              <li class="col-lg-2"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></li>
-              <li class="col-lg-2">Email</li>
-              <li class="col-lg-2">About-Me</li>
-            </div>
-          </ul>
-        </nav>
+      <div class="sub-head">
+        <div class="container">
+          <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
+          <h1>My name is Reynaldo Salcedo</h1>
+          <h2>I am</h2>
+          <nav>
+            <ul>
+              <div class="row container">
+                <li class="col-lg-2">Home</li>
+                <li class="col-lg-2">Porfolio</li>
+                <li class="col-lg-2"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></li>
+                <li class="col-lg-2">Email</li>
+                <li class="col-lg-2">About-Me</li>
+              </div>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
   </body>
