Added links to nav

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <nav>
             <ul>
               <div class="row container">
-                <li class="col-lg-2">Home</li>
-                <li class="col-lg-2">Porfolio</li>
-                <li class="col-lg-2"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></li>
-                <li class="col-lg-2">Email</li>
-                <li class="col-lg-2">About-Me</li>
+                <li class="col-lg-2"><a href="#">Home</a></li>
+                <li class="col-lg-2"><a href="#">Porfolio</a></li>
+                <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+                <li class="col-lg-2"><a href="#">Email</a></li>
+                <li class="col-lg-2"><a href="#">About-Me</a></li>
               </div>
             </ul>
           </nav>
