--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reynaldo Salcedo | Full Stack Developer</title>
     <!-- Latest compiled and minified CSS -->
-    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
@@ -20,11 +19,11 @@
           <nav>
             <ul>
               <div class="row container">
-                <li class="col-lg-2"><a href="#">Home</a></li>
+                <li class="col-lg-2"><a href="index.html">Home</a></li>
                 <li class="col-lg-2"><a href="#">Porfolio</a></li>
                 <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
                 <li class="col-lg-2"><a href="#">Email</a></li>
-                <li class="col-lg-2"><a href="#">About-Me</a></li>
+                <li class="col-lg-2"><a href="#">About</a></li>
               </div>
             </ul>
           </nav>
