Added nav and styles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="container">
           <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
           <h1>My name is Reynaldo Salcedo</h1>
-          <h2>I am</h2>
-          <nav>
+          <h2 class="i-am" id="">I am</h2>
+          <nav class="main-nav">
             <ul>
               <div class="row container">
                 <li class="col-lg-2"><a href="index.html">Home</a></li>
