--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
-    <header class="mast-head">
+    <div class="mast-head row">
+    <header class="col-lg-10">
       <div class="container">
         <div class="sub-head">
           <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
@@ -30,5 +31,9 @@
         </nav>
       </div>
     </header>
+    <aside class="col-lg-2">
+      <h2>Contact</h2>
+    </aside>
+    </div>
   </body>
 </html>
