--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
-    <div class="mast-head row">
-    <header class="col-lg-10">
+    <header class="col-lg-10 mast-head">
       <div class="container">
         <div class="sub-head">
           <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
           <h1>My name is Reynaldo Salcedo</h1>
           <h2 class="i-am" id="">I am</h2>
         </div>
+        <button class="btn btn-side">Contact</button>
         <nav class="main-nav">
           <ul>
             <div class="row container">
@@ -33,7 +33,8 @@
     </header>
     <aside class="col-lg-2">
       <h2>Contact</h2>
+      <form method="post">
+      </form>
     </aside>
-    </div>
   </body>
 </html>
