Added styles to sidebar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </header>
     <!-- SIDEBAR -->
-    <aside class="col-lg-2">
+    <aside class="sidebar col-lg-2">
       <h2>Contact</h2>
       <form method="post">
         <label for="fname">First Name</label>
