--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <label for="lname">Last Name</label>
         <input type="text" name="lname" id="lname" />
 
+        <label for="Subject">Subject</label>
+        <input type="text" name="subject" id="subject" />
+
         <label for="message">Message</label>
         <textarea name="message" id="message" rows="8" cols="30"></textarea>
 
