Added styles to qualitie

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="sub-head">
           <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
           <h1>My name is Reynaldo Salcedo</h1>
-          <h2 class="i-am" id="iAm">I am A <span id="attr">Developer</span></h2>
+          <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
         </div>
         <button class="btn btn-side" id="contact">Contact</button>
         <nav class="main-nav">
