Added responsiveness to action

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="col-lg-12 mast-head">
+    <header class="mast-head col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="container">
         <div class="sub-head">
           <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
@@ -33,7 +33,7 @@
       </div>
     </header>
     <!-- SIDEBAR -->
-    <aside id="sidebar" class="sidebar col-lg-2">
+    <aside id="sidebar" class="sidebar col-xs-2 col-sm-2 col-md-2 col-lg-2">
       <h2>Contact</h2>
       <form method="post">
         <label for="fname">First Name</label>
