--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <ul>
             <div class="row container">
               <li class="col-lg-2"><a href="index.html">Home</a></li>
-              <li class="col-lg-2"><a href="#">Porfolio</a></li>
+              <li class="col-lg-2"><a href="#">Skills</a></li>
               <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-              <li class="col-lg-2"><a href="#">Email</a></li>
+              <li class="col-lg-2"><a href="#">Portfolio</a></li>
               <li class="col-lg-2"><a href="#">About</a></li>
             </div>
           </ul>
