Added content for skills

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="mast-head col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <div class="container">
-        <div class="sub-head">
-          <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
-          <h1>My name is Reynaldo Salcedo</h1>
-          <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
-        </div>
-        <button class="btn btn-side" id="contact">Contact</button>
-        <nav class="main-nav">
-          <ul>
-            <div class="row container">
-              <li class="col-lg-2"><a href="index.html">Home</a></li>
-              <li class="col-lg-2"><a href="#">Skills</a></li>
-              <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-              <li class="col-lg-2"><a href="#">Portfolio</a></li>
-              <li class="col-lg-2"><a href="#">About</a></li>
-            </div>
-          </ul>
-        </nav>
+  <header class="mast-head col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="container">
+      <div class="sub-head">
+        <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
+        <h1>My name is Reynaldo Salcedo</h1>
+        <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
       </div>
-    </header>
+      <button class="btn btn-side" id="contact">Contact</button>
+      <nav class="main-nav">
+        <ul>
+          <div class="row container">
+            <li class="col-lg-2"><a href="index.html">Home</a></li>
+            <li class="col-lg-2"><a href="#">Skills</a></li>
+            <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-lg-2"><a href="#">Portfolio</a></li>
+            <li class="col-lg-2"><a href="#">About</a></li>
+          </div>
+        </ul>
+      </nav>
+    </div>
+  </header>
     <!-- SIDEBAR -->
     <aside id="sidebar" class="sidebar col-xs-2 col-sm-2 col-md-2 col-lg-2">
       <h2>Contact</h2>
@@ -51,8 +51,43 @@
         <input class="btn btn-side-submit" type="submit" name="submit" id="submit" value="Send" />
       </form>
     </aside>
+    <!-- Section Skills -->
+    <section class="skills" id="skills">
+      <div class="container">
+        <h2>Skills</h2>
+        <!-- HTML/CSS -->
+        <figure>
+          <figcaption>HTML/CSS</figcaption>
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </figure>
+        <!-- Javascript/JQ -->
+        <figure>
+          <figcaption>JAVASCRIPT/JQUERY</figcaption>
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </figure>
+        <!-- RUBY ON RAILS -->
+        <figure>
+          <figcaption>RUBY ON RAILS</figcaption>
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </figure>
+        <!-- NODEJS -->
+        <figure>
+          <figcaption>NODEJS</figcaption>
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </figure>
+      </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
+
   </body>
 </html>
