Added animations and interactions for skills

--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
     <!-- Section Skills -->
     <section class="skills" id="skills">
       <div class="container">
-        <h2>Skills</h2>
+        <h2>Language Skills</h2>
         <!-- HTML/CSS -->
-        <figure>
-          <figcaption>HTML/CSS</figcaption>
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
+        <div class="box">
+          <h3>HTML/CSS</h3>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
-        </figure>
+        </div>
         <!-- Javascript/JQ -->
-        <figure>
-          <figcaption>JAVASCRIPT/JQUERY</figcaption>
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+        <div class="box">
+          <h3>JAVASCRIPT/JQUERY</h3>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
-        </figure>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </div>
         <!-- RUBY ON RAILS -->
-        <figure>
-          <figcaption>RUBY ON RAILS</figcaption>
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+        <div class="box">
+          <h3>RUBY ON RAILS</h3>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="intermediate" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
-        </figure>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </div>
         <!-- NODEJS -->
-        <figure>
-          <figcaption>NODEJS</figcaption>
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+        <div class="box">
+          <h3>NODEJS</h3>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
-        </figure>
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+        </div>
       </div>
     </section>
 
