--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="btn btn-side" id="contact">Contact</button>
       <nav class="main-nav">
         <ul>
-          <div class="row container">
+          <div class="container">
             <li class="col-lg-2"><a href="index.html">Home</a></li>
             <li class="col-lg-2"><a href="#">Skills</a></li>
             <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
