Began to add interactions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- HTML/CSS -->
         <div class="box">
           <h3>HTML/CSS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" id="beg-js" src="assets/img/ninja-white-belt.png" alt="Beginner" />
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
         </div>
@@ -87,6 +87,7 @@
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
 
   </body>
