Added dialog to images

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </form>
     </aside>
     <!-- Section Skills -->
+    
     <section class="skills" id="skills">
       <div class="container">
         <h2>Language Skills</h2>
@@ -84,7 +85,12 @@
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
         </div>
       </div>
+      <!-- Reusable components for ninjas-obj-->
+      <div id="beg-dialog" title="Beginer"><p>This ninja represents familiarity with the technology.</p></div>
+      <div id="inter-dialog" title="Intermediate"><p>This ninja represents profiency with the technology.</p></div>
+      <div id="exp-dialog" title="Expert"><p>This ninja represents mastery of the technology.</p></div>
     </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
