--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- HTML/CSS -->
         <div class="box">
           <h3>HTML/CSS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" id="beg-js" src="assets/img/ninja-white-belt.png" alt="Beginner" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
         </div>
@@ -85,16 +85,11 @@
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
         </div>
       </div>
-      <!-- Reusable components for ninjas-obj-->
-      <div id="beg-dialog" title="Beginer"><p>This ninja represents familiarity with the technology.</p></div>
-      <div id="inter-dialog" title="Intermediate"><p>This ninja represents profiency with the technology.</p></div>
-      <div id="exp-dialog" title="Expert"><p>This ninja represents mastery of the technology.</p></div>
     </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
-
   </body>
 </html>
