Added skills desc

--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
         <div class="box">
           <h3>HTML/CSS</h3>
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate"alt="Intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
         </div>
         <!-- Javascript/JQ -->
         <div class="box">
           <h3>JAVASCRIPT/JQUERY</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="Intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
         </div>
         <!-- RUBY ON RAILS -->
         <div class="box">
           <h3>RUBY ON RAILS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
         </div>
         <!-- NODEJS -->
         <div class="box">
           <h3>NODEJS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" alt="Intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="Intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
         </div>
       </div>
     </section>
