Changed second section header-name

--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
       </form>
     </aside>
     <!-- Section Skills -->
-    
     <section class="skills" id="skills">
       <div class="container">
-        <h2>Language Skills</h2>
+        <h2>Technical Skills</h2>
         <!-- HTML/CSS -->
         <div class="box">
           <h3>HTML/CSS</h3>
