Added portfolio content

--- a/index.html
+++ b/index.html
@@ -85,6 +85,33 @@
         </div>
       </div>
     </section>
+    <!--Section Porfolio-->
+    <section class="portfolio">
+      <div class="container">
+        <h2>Portfolio</h2>
+        <!-- TweetStream -->
+        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+          <h3>TweetStream</h3>
+          <img class="img-responsive"src="assets/img/pages/tweesteam.png" alt="TweetStream" />
+        </div>
+        <!-- Omnifood -->
+        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+          <h3>Omnifood</h3>
+          <img class="img-responsive"src="assets/img/pages/omnifood.png" alt="Omnifood" />
+        </div>
+        <!-- Timeout -->
+        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+          <h3>Timeout</h3>
+          <img class="img-responsive"src="assets/img/pages/timeout.png" alt="Timeout" />
+        </div>
+        <!-- Trash-Free Brooklyn -->
+        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+          <h3>Trash-Free Brooklyn</h3>
+          <img class="img-responsive"src="assets/img/pages/tfbrooklyn.png" alt="Trash-Free Brooklyn" />
+        </div>
+
+      </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
