--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
       <div class="container">
         <h2>Portfolio</h2>
         <!-- TweetStream -->
-        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>TweetStream</h3>
           <img class="img-responsive"src="assets/img/pages/tweesteam.png" alt="TweetStream" />
         </div>
         <!-- Omnifood -->
-        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Omnifood</h3>
           <img class="img-responsive"src="assets/img/pages/omnifood.png" alt="Omnifood" />
         </div>
         <!-- Timeout -->
-        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Timeout</h3>
-          <img class="img-responsive"src="assets/img/pages/timeout.png" alt="Timeout" />
+          <img class="group img-responsive"src="assets/img/pages/timeout.png" alt="Timeout" />
         </div>
         <!-- Trash-Free Brooklyn -->
-        <div class="box col-xs-5 col-sm-5 col-md-5 col-lg-5 group clearfix">
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Trash-Free Brooklyn</h3>
           <img class="img-responsive"src="assets/img/pages/tfbrooklyn.png" alt="Trash-Free Brooklyn" />
         </div>
