--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <h2>Portfolio</h2>
         <!-- TweetStream -->
-        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box" id="tweet-box">
           <h3>TweetStream</h3>
           <img class="img-responsive"src="assets/img/pages/tweesteam.png" alt="TweetStream" />
         </div>
@@ -113,6 +113,9 @@
       </div>
     </section>
 
+    <div id="dialog" title="Basic dialog">
+      <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
