Added footer content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reynaldo Salcedo | Full Stack Developer</title>
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
@@ -111,8 +112,16 @@
         </div>
       </div>
     </section>
-
-
+    <footer>
+      <div class="container">
+        <p class="col-xs-6 col-sm-6 col-md-6 col-lg-6">Email: <a href="mailto:salcedoreynaldo5@gmail.com">salcedoreynaldo5@gmail.com</a></p>
+        <!-- Social Media Icons -->
+        <i class="ion-social-github-outline col-xs-3 col-sm-3 col-md-3 col-lg-3"></i>
+        <i class="ion-social-linkedin-outline col-xs-3 col-sm-3 col-md-3 col-lg-3"></i>
+        <!-- Last statement -->
+        <small>&copy; 2016 <u>Reynaldo Salcedo.</u> All rights reserved.</small>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
