--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
     </section>
     <footer>
       <div class="container">
-        <p class="col-xs-6 col-sm-6 col-md-6 col-lg-6">Email: <a href="mailto:salcedoreynaldo5@gmail.com">salcedoreynaldo5@gmail.com</a></p>
+        <p class="email-link col-xs-6 col-sm-6 col-md-6 col-lg-6">Email: <a href="mailto:salcedoreynaldo5@gmail.com">salcedoreynaldo5@gmail.com</a></p>
         <!-- Social Media Icons -->
-        <i class="ion-social-github-outline col-xs-3 col-sm-3 col-md-3 col-lg-3"></i>
-        <i class="ion-social-linkedin-outline col-xs-3 col-sm-3 col-md-3 col-lg-3"></i>
+        <a href="#"><i class="ion-social-github social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
+        <a href="#"><i class="ion-social-linkedin social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
+        <a href="#"><i class="ion-social-twitter social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
         <!-- Last statement -->
-        <small>&copy; 2016 <u>Reynaldo Salcedo.</u> All rights reserved.</small>
+        <small class="text-center">&copy; 2016 <u>Reynaldo Salcedo.</u> All rights reserved.</small>
       </div>
     </footer>
 
