--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <ul>
           <div class="container">
             <li class="col-lg-2"><a href="index.html">Home</a></li>
-            <li class="col-lg-2"><a href="#">Skills</a></li>
+            <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
             <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-            <li class="col-lg-2"><a href="#">Portfolio</a></li>
-            <li class="col-lg-2"><a href="#">About</a></li>
+            <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
+            <li class="col-lg-2"><a href="#contact">Email</a></li>
           </div>
         </ul>
       </nav>
@@ -53,7 +53,7 @@
       </form>
     </aside>
     <!-- Section Skills -->
-    <section class="skills" id="skills">
+    <section class="skills" id="skills-section">
       <div class="container">
         <h2>Technical Skills</h2>
         <!-- HTML/CSS -->
@@ -87,7 +87,7 @@
       </div>
     </section>
     <!--Section Porfolio-->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio-section">
       <div class="container">
         <h2>Portfolio</h2>
         <!-- TweetStream -->
