Added action link to link button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
             <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
             <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
-            <li class="col-lg-2"><a href="#contact">Email</a></li>
+            <li class="col-lg-2" id="portfolio"><a href="#">Email</a></li>
           </div>
         </ul>
       </nav>
