Added queries to links

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <button class="btn btn-side" id="contact">Contact</button>
       <nav class="main-nav">
         <ul>
-          <div class="container">
-            <li class="col-lg-2"><a href="index.html">Home</a></li>
-            <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
-            <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-            <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
-            <li class="col-lg-2" id="portfolio"><a href="#">Email</a></li>
+          <div class="nav container">
+            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="index.html">Home</a></li>
+            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="#skills-section">Skills</a></li>
+            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
+            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="portfolio"><a href="#">Email</a></li>
           </div>
         </ul>
       </nav>
