Removed responsived classes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reynaldo Salcedo | Full Stack Developer</title>
@@ -23,11 +22,11 @@
       <nav class="main-nav">
         <ul>
           <div class="nav container">
-            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="index.html">Home</a></li>
-            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="#skills-section">Skills</a></li>
-            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
-            <li class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="portfolio"><a href="#">Email</a></li>
+            <li class="col-lg-2"><a href="index.html">Home</a></li>
+            <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
+            <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
+            <li class="col-lg-2" id="portfolio"><a href="#">Email</a></li>
           </div>
         </ul>
       </nav>
