--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="assets/vendor/scroll.js"></script>
+    <script type="text/javascript" charset="utf-8" src="assets/vendor/jquery.waypoints.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
-    <script type="text/javascript" charset="utf-8" src="assets/js/scroll.js"></script>
   </body>
 </html>
