--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="container">
             <li class="col-lg-2"><a href="index.html">Home</a></li>
             <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
-            <li class="col-lg-2"><a href="index.html"><img class="logo img-responsive" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-lg-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo.png" alt="Logo image" /></a></li>
             <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
             <li class="col-lg-2" id="portfolio"><a href="#">Email</a></li>
           </div>
