Added background-color to nav and removed underlined

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
       </div>
       <button class="btn btn-side" id="contact">Contact</button>
-      <nav class="main-nav">
+      <nav class="main-nav nav-body">
         <ul>
           <div class="container">
             <li class="col-lg-2"><a href="index.html">Home</a></li>
             <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
             <li class="col-lg-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-            <li class="col-lg-2"><a href="#portfolio-section">Portfolio</a></li>
-            <li class="col-lg-2" id="portfolio"><a href="#">Email</a></li>
+            <li class="col-lg-3"><a href="#portfolio-section">Portfolio</a></li>
+            <li class="col-lg-1" id="portfolio"><a href="#">Email</a></li>
           </div>
         </ul>
       </nav>
