Added interaction to nav-background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
       </div>
       <button class="btn btn-side" id="contact">Contact</button>
-      <nav class="main-nav nav-body">
+      <nav class="main-nav">
         <ul>
           <div class="container">
             <li class="col-lg-2"><a href="index.html">Home</a></li>
