Added nav responsivesness

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <nav class="main-nav">
         <ul>
           <div class="container">
-            <li class="col-lg-2"><a href="index.html">Home</a></li>
-            <li class="col-lg-2"><a href="#skills-section">Skills</a></li>
-            <li class="col-lg-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo.png" alt="Logo image" /></a></li>
-            <li class="col-lg-3"><a href="#portfolio-section">Portfolio</a></li>
-            <li class="col-lg-1" id="portfolio"><a href="#">Email</a></li>
+            <li class="col-lg-2 col-md-2"><a href="index.html">Home</a></li>
+            <li class="col-lg-2 col-md-2"><a href="#skills-section">Skills</a></li>
+            <li class="col-lg-2 col-md-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-lg-3 col-md-3"><a href="#portfolio-section">Portfolio</a></li>
+            <li class="col-lg-1 col-md-1" id="portfolio"><a href="#">Email</a></li>
           </div>
         </ul>
       </nav>
