Added link to github

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="container">
         <p class="email-link col-xs-6 col-sm-6 col-md-6 col-lg-6">Email: <a href="mailto:salcedoreynaldo5@gmail.com">salcedoreynaldo5@gmail.com</a></p>
         <!-- Social Media Icons -->
-        <a href="#"><i class="ion-social-github social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
+        <a href="#"><i class="ion-social-github social-links col-xs-2 col-sm-2 col-md-2 col-lg-2">https://github.com/renisalcedo</i></a>
         <a href="#"><i class="ion-social-linkedin social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
         <a href="#"><i class="ion-social-twitter social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
         <!-- Last statement -->
