--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       <div class="container">
         <p class="email-link col-xs-6 col-sm-6 col-md-6 col-lg-6">Email: <a href="mailto:salcedoreynaldo5@gmail.com">salcedoreynaldo5@gmail.com</a></p>
         <!-- Social Media Icons -->
-        <a href="#"><i class="ion-social-github social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i>https://github.com/renisalcedo</a>
-        <a href="#"><i class="ion-social-linkedin social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
+        <a href="https://github.com/renisalcedo"><i class="ion-social-github social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
+        <a href="https://www.linkedin.com/in/reynaldo-salcedo-b37a22a0"><i class="ion-social-linkedin social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
         <a href="#"><i class="ion-social-twitter social-links col-xs-2 col-sm-2 col-md-2 col-lg-2"></i></a>
         <!-- Last statement -->
         <small class="text-center">&copy; 2016 <u>Reynaldo Salcedo.</u> All rights reserved.</small>
