--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
         <!-- TweetStream -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box" id="tweet-box">
           <h3>TweetStream</h3>
-          <a href="#"><img class="img-responsive"src="assets/img/pages/tweesteam.png" alt="TweetStream" /></a>
+          <a href="https://github.com/renisalcedo/text2song"><img class="img-responsive"src="assets/img/pages/text2song.png" alt="Text2Song" /></a>
         </div>
         <!-- Omnifood -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Omnifood</h3>
-          <a href="#"><img class="img-responsive"src="assets/img/pages/omnifood.png" alt="Omnifood" /></a>
+          <a href="https://bitbucket.org/renisalcedo/omnifood"><img class="img-responsive"src="assets/img/pages/omnifood.png" alt="Omnifood" /></a>
         </div>
         <!-- Timeout -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Timeout</h3>
-          <a href="#"><img class="group img-responsive"src="assets/img/pages/timeout.png" alt="Timeout" /></a>
+          <a href="http://renisalcedo.github.io/TIME-OUT/index.html"><img class="group img-responsive"src="assets/img/pages/timeout.png" alt="Timeout" /></a>
         </div>
         <!-- Trash-Free Brooklyn -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Trash-Free Brooklyn</h3>
-          <a href="#"><img class="img-responsive"src="assets/img/pages/tfbrooklyn.png" alt="Trash-Free Brooklyn" /></a>
+          <a href="https://github.com/renisalcedo/trash-free"><img class="img-responsive"src="assets/img/pages/tfbrooklyn.png" alt="Trash-Free Brooklyn" /></a>
         </div>
       </div>
     </section>
